finalise weather api
